--- a/index.html
+++ b/index.html
@@ -9,9 +9,185 @@
     <title>Bicycle</title>
 </head>
 <body>
-    <div class="container text-center">
-        <h1>Hello bootstrap</h1>
-    </div>
+    <section class="intro w-100 position-relative">
+        <div class="intro-overlay position-absolute bg-black"></div>
+        <img src="images/person_1.jpg" alt="PERSON" class="intro-bg img-fluid object-fit-cover h-100 w-100 position-absolute" >
+        
+        <header class="header w-100 text-white py-4 position-relative">
+            <div class="container mx-auto d-flex align-items-center justify-content-between">
+                <h4 class="header-logo m-0" style="font-family: 'Roboto', sans-serif;">
+                    Medio
+                </h4>
+                <div class="navigation d-flex align-items-center">
+                    <ul class="d-flex align-items-center">
+                        <li class="px-2"><a href="#">Home</a></li>
+                        <li class="px-2"><a href="#">Dropdown</a></li>
+                        <li class="px-2"><a href="#">Services</a></li>
+                        <li class="px-2"><a href="#">Portfolio</a></li>
+                        <li class="px-2"><a href="#">About</a></li>
+                        <li class="px-2"><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="toggle-menu">
+                    <span></span>
+                </div>
+        </header>
+
+        <div class="intro-content position-relative h-75 d-flex align-items-center justify-content-center">
+            <div class="container">
+
+                <div class="col-lg-6 col-xxl-9">
+                    <h1 class="text-white intro-content-logo">We are creative agency by Untree.co</h1>
+                    <div class="intro-buttons d-flex align-items-center gap-4 mt-4">
+                        <button class="intro-btn bg-transparent text-white border-white">See Portfolio</button>
+                        <div class="watch d-flex align-items-center gap-3">
+                            <button class="watch-btn"></button>
+                            <span class="text-white">Watch our video</h6> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div><!--intro-content-->
+
+    </section>
+
+    <section class="service d-flex align-items-center my-5">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-4 col-md-4 grayscale my-2 h-100">
+                    <img src="images/img_1.jpg" class="img-fluid img-service" alt="">
+                    <div class="service-item-text mx-auto d-flex flex-column gap-3 my-3" style="width: 90%;">
+                        <h5 class="service-text-title">Collaborate</h5>
+                        <p>
+                            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                        </p>
+                        <button class="align-self-start">Learn More</button>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 grayscale my-2 h-100">
+                    <img src="images/img_2.jpg" class="img-fluid img-service" alt="">
+                    <div class="service-item-text mx-auto d-flex flex-column gap-3 my-3" style="width: 90%;">
+                        <h5 class="service-text-title">Connect</h5>
+                        <p>
+                            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                        </p>
+                        <button class="align-self-start">Learn More</button>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 grayscale my-2 h-100">
+                    <img src="images/img_3.jpg" class="img-fluid img-service" alt="">
+                    <div class="service-item-text mx-auto d-flex flex-column gap-3 my-3" style="width: 90%;">
+                        <h5 class="service-text-title">Grow</h5>
+                        <p>
+                            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                        </p>
+                        <button class="align-self-start">Learn More</button>
+                    </div>
+                </div>
+
+            </div><!--row-->
+        </div><!--container-->
+    </section>
+
+    <section class="portfolio my-5">
+        <div class="container">
+            <div class="row d-flex justify-content-center text-center mb-5">
+                <p class="text-uppercase">awesome portfolio</p>
+                <h2 class="mb-3">Our Portfolio</h2>
+            </div>
+
+            <div class="row justify-content-center">
+
+                    <div class="col-md-6 col-lg-4 mb-4 col-sm-11">
+                        <div class="img-fluid position-relative img-div">
+                            <img src="images/grid/img_v_1-min.jpg" alt="image" class="img-fluid">
+                            <div class="portfolio-item-overlay position-absolute bg-black"></div>
+                            <div class="portfolio-img-text flex-column d-flex justify-content-center align-items-center position-absolute">
+                                <div class="portfolio-text-name text-white text-uppercase">Bonzai Tree</div>
+                                <div class="portoflio-text-category text-uppercase">Simple Woman</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-4 col-sm-11">
+                        <div class="img-fluid position-relative img-div">
+                            <img src="images/grid/img_v_2-min.jpg" alt="image" class="img-fluid">
+                            <div class="portfolio-item-overlay position-absolute bg-black"></div>
+                            <div class="portfolio-img-text flex-column d-flex justify-content-center align-items-center position-absolute">
+                                <div class="portfolio-text-name text-white text-uppercase">Simple Woman</div>
+                                <div class="portoflio-text-category text-uppercase">branding</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-4 col-sm-11">
+                        <div class="img-fluid position-relative img-div">
+                            <img src="images/grid/img_v_3-min.jpg" alt="image" class="img-fluid">
+                            <div class="portfolio-item-overlay position-absolute bg-black"></div>
+                            <div class="portfolio-img-text flex-column d-flex justify-content-center align-items-center position-absolute">
+                                <div class="portfolio-text-name text-white text-uppercase">Fruits</div>
+                                <div class="portoflio-text-category text-uppercase">Website</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-4 col-sm-11">
+                        <div class="img-fluid position-relative img-div">
+                            <img src="images/grid/img_v_4-min.jpg" alt="image" class="img-fluid">
+                            <div class="portfolio-item-overlay position-absolute bg-black"></div>
+                            <div class="portfolio-img-text flex-column d-flex justify-content-center align-items-center position-absolute">
+                                <div class="portfolio-text-name text-white text-uppercase">Design Material</div>
+                                <div class="portoflio-text-category text-uppercase">web application</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-4 col-sm-11">
+                        <div class="img-fluid position-relative img-div">
+                            <img src="images/grid/img_v_5-min.jpg" alt="image" class="img-fluid">
+                            <div class="portfolio-item-overlay position-absolute bg-black"></div>
+                            <div class="portfolio-img-text flex-column d-flex justify-content-center align-items-center position-absolute">
+                                <div class="portfolio-text-name text-white text-uppercase">Handy Food</div>
+                                <div class="portoflio-text-category text-uppercase">branding</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-4 col-sm-11">
+                        <div class="img-fluid position-relative img-div">
+                            <img src="images/grid/img_v_6-min.jpg" alt="image" class="img-fluid">
+                            <div class="portfolio-item-overlay position-absolute bg-black"></div>
+                            <div class="portfolio-img-text flex-column d-flex justify-content-center align-items-center position-absolute">
+                                <div class="portfolio-text-name text-white text-uppercase">Cat With Cup</div>
+                                <div class="portoflio-text-category text-uppercase">website</div>
+                            </div>
+                        </div>
+                    </div>           
+
+            </div><!--row-->
+        </div><!--container-->
+    </section>
+
+    <section class="create my-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-12 col-sm-12 col-10 mb-3">
+                    <span class="text-uppercase">We love to design</span>
+                    <h2>Create Outstanding Website</h2>
+                    <p>
+                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                    </p>
+                    <button class="create-btn text-white">Get Started</button>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-5">
+                    <img class="create-img downed img-fluid rounded" src="images/grid/img_v_5-min.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-5">
+                    <img class="create-img img-fluid rounded" src="images/grid/img_v_6-min.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
