--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                         <li class="px-2"><a href="#">About</a></li>
                         <li class="px-2"><a href="#">Contact</a></li>
                     </ul>
+                    <div class="close-nav position-absolute">
+
+                    </div>
                 </div>
                 <div class="toggle-menu">
                     <span></span>
@@ -42,12 +45,12 @@
         <div class="intro-content position-relative h-75 d-flex align-items-center justify-content-center">
             <div class="container">
 
-                <div class="col-lg-6 col-xxl-9">
+                <div class="col-lg-6 col-xxl-9 intro-col">
                     <h1 class="text-white intro-content-logo">We are creative agency by Untree.co</h1>
                     <div class="intro-buttons d-flex align-items-center gap-4 mt-4">
                         <button class="intro-btn bg-transparent text-white border-white">See Portfolio</button>
                         <div class="watch d-flex align-items-center gap-3">
-                            <button class="watch-btn"></button>
+                            <button class="watch-btn icon-play"></button>
                             <span class="text-white">Watch our video</h6> 
                         </div>
                     </div>
@@ -345,31 +348,113 @@
                         <img src="images/grid/img_v_3-min.jpg" class="img-fluid rounded" alt="#">
                         <h3 class="service-name">Digital Advertising</h3>
                         <div class="service-suptitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias quae debitis iste magnam architecto laboriosam deleniti ullam ut odio. Totam?</div>
-                        <div class="service-btn align-self-start">Learn More</div>
+                        <div class="service-btn align-self-start">Find out more</div>
                     </div>
                 </div>
-
                 <div class="col-lg-4 col-md-4 my-2">
                     <div class="interest-div d-flex justify-content-center flex-column gap-3">
                         <img src="images/grid/img_v_4-min.jpg" class="img-fluid rounded" alt="#">
                         <h3 class="service-name">Content Creation</h3>
                         <div class="service-suptitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias quae debitis iste magnam architecto laboriosam deleniti ullam ut odio. Totam?</div>
-                        <div class="service-btn align-self-start">Learn More</div>
+                        <div class="service-btn align-self-start">Find out more</div>
                     </div>
                 </div>
-
                 <div class="col-lg-4 col-md-4 my-2">
                     <div class="interest-div d-flex justify-content-center flex-column gap-3">
                         <img src="images/grid/img_v_6-min.jpg" class="img-fluid rounded" alt="#">
                         <h3 class="service-name">Time and Project Mgt.</h3>
                         <div class="service-suptitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias quae debitis iste magnam architecto laboriosam deleniti ullam ut odio. Totam?</div>
-                        <div class="service-btn align-self-start">Learn More</div>
+                        <div class="service-btn align-self-start">Find out more</div>
                     </div>
                 </div>
 
-        </div>
-    </section>
+            </div><!--row-->
 
+        </div><!--container-->
+    </section><!--testimonials-->
+
+    <section class="subscribe">
+        <div class="container">
+            <div class="row">
+                <h2 class="service-name">Subscribe to Newsletter</h2>
+                <div class="service-suptitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+                <div class="row">
+                    <div class="col-lg-6 cold-md-6 col-sm-12 col-12 my-3">
+                        <input type="text" class="w-100" placeholder="Your name">
+                    </div>
+                    <div class="col-lg-6 cold-md-6 col-sm-12 col-12 my-3">
+                        <input class="w-100" type="email" placeholder="Your email">
+                    </div>
+                    <div class="subscribe-btn my-3">
+                        <button class="create-btn text-white">Subscribe</button>
+                    </div>
+                </div>
+            </div><!--row-->
+        </div><!--container-->
+    </section><!--subscribe-->
+
+
+    <section class="footer">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-4 col-md-12 col-sm-12 d-flex flex-column">
+                    <h5 class="text-uppercase mt-4 footer-nav-bold">contact</h5>
+                    <span>43 Raymouth Rd. Baltemoer, London 3910</span>
+                    <span>+1(123)-456-7890</span>
+                    <span>+1(123)-456-7890</span>
+                    <span>info@mydomain.com</span> 
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-12 d-flex">
+                    <div class="row">
+                        <h5 class="text-uppercase mt-4 footer-nav-bold">sources</h5>
+                        <div class="col mt-2 d-flex flex-column">
+                            <span>About us</span>
+                            <span>Services</span>
+                            <span>Vision</span>
+                            <span>Mission</span> 
+                            <span>Terms</span> 
+                            <span>Privacy</span> 
+                        </div>
+
+                        <div class="col mt-2 d-flex flex-column">
+                            <span>Partners</span>
+                            <span>Business</span>
+                            <span>Careers</span>
+                            <span>Blog</span> 
+                            <span>FAQ</span> 
+                            <span>Creative</span> 
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-12 col-sm-12 d-flex flex-column">
+                    <h5 class="text-uppercase mt-4 footer-nav-bold">links</h5>
+                    <span>Our Vision</span>
+                    <span>About us</span>
+                    <span>Contact us</span>
+                    <div class="socials mt-2 d-flex align-items-center gap-3">
+                        <span class="icon-twitter"></span>
+                        <span class="icon-instagram"></span>
+                        <span class="icon-facebook"></span>
+                        <span class="icon-pinterest"></span>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="row copyright text-center mt-4 ">
+                <div class="col-12 mt-5">
+                    Copyright ©2022. All Rights Reserved. — Developed with love by @danyatcode
+                </div>
+                
+            </div>
+        </div><!--container-->
+    </section><!--footer-->
+
+    <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
