--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 	<link rel="stylesheet" href="fonts/feather/style.css">
 
-    <title>Bicycle</title>
+    <title>Minimal</title>
 </head>
 <body>
     <section class="intro w-100 position-relative">
